@@ -350,7 +350,7 @@ form.classic {
     .label-right {
         text-align: right;
         label {
-            text-align: left;
+            padding: 0.5rem 0 0.5rem 0.5rem; text-align: left;
         }
     }
 }
